Update index.html, added scss partials

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,24 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0">
 
+  <meta name="description"
+    content="Discover a new way of learning with Skilled, an innovative e-learning platform. Explore a wide range of courses and start your journey towards mastering new skills.">
+
   <link rel="icon"
     type="image/png"
     sizes="32x32"
     href="./assets/favicon-32x32.png">
 
   <title>Frontend Mentor | Skilled e-learning landing page</title>
+
+  <link rel="preconnect"
+    href="https://fonts.googleapis.com">
+  <link rel="preconnect"
+    href="https://fonts.gstatic.com"
+    crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@800&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet"
     href="./css/style.css">
 </head>
@@ -31,18 +43,19 @@
       <p class="intro__text">Our modern courses across a range of in-demand skills will give you the
         knowledge you need to live the life you want.</p>
 
-      <!-- navigate to the popular courses part with this button -->
       <a class="intro__btn"
+        href="#">Get Started</a>
+
+      <img class="intro__img"
+        src="./assets/image-hero-mobile.webp"
+        alt="">
+
+      <a class="header__btn"
         href="#">Get Started</a>
 
     </section>
   </main>
 
-
-
-
-
-  Get Started
 
   Check out our most popular courses!
 
