--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <link rel="preconnect"
     href="https://fonts.gstatic.com"
     crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@800&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap"
     rel="stylesheet">
 
   <link rel="stylesheet"
@@ -50,13 +50,10 @@
         src="./assets/image-hero-mobile.webp"
         alt="">
 
-      <a class="header__btn"
-        href="#">Get Started</a>
-
     </section>
   </main>
 
-
+  <!-- 
   Check out our most popular courses!
 
   Animation
@@ -84,7 +81,7 @@
   without outside investment.
   Get Started
 
-  Get Started
+  Get Started -->
 
 </body>
 
