--- a/src/index.html
+++ b/src/index.html
@@ -55,40 +55,86 @@
         <img src="./assets/image-hero-mobile.png"
           alt="Woman drinking coffee">
       </picture>
+    </section>
 
+    <section class="courses">
+      <h2 class="courses__title">Check out our most popular courses!</h2>
+      <div class="courses__container">
+        <div class="courses__card">
+          <img class="courses__card-img"
+            src="./assets/icon-animation.svg"
+            alt="">
+          <div class="courses__card-content">
+            <h3 class="courses__card-title">Animation
+            </h3>
+            <p class="courses__card-text">Learn the latest animation techniques to create stunning motion
+              design and captivate your audience.</p>
+            <a href="#">Get Started</a>
+          </div>
+        </div>
+        <div class="courses__card">
+          <img class="courses__card-img"
+            src="./assets/icon-design.svg"
+            alt="">
+          <div class="courses__card-content">
+            <h3 class="courses__card-title">Design
+            </h3>
+            <p class="courses__card-text">Create beautiful, usable interfaces to help shape the future of
+              how the web looks.</p>
+            <a href="#">Get Started</a>
+          </div>
+        </div>
+        <div class="courses__card">
+          <img class="courses__card-img"
+            src="./assets/icon-photography.svg"
+            alt="">
+          <div class="courses__card-content">
+            <h3 class="courses__card-title">Photography
+            </h3>
+            <p class="courses__card-text">Explore critical fundamentals like lighting, composition, and focus
+              to capture exceptional photos.</p>
+            <a href="#">Get Started</a>
+          </div>
+        </div>
+        <div class="courses__card">
+          <img class="courses__card-img"
+            src="./assets/icon-crypto.svg"
+            alt="">
+          <div class="courses__card-content">
+            <h3 class="courses__card-title">Crypto
+            </h3>
+            <p class="courses__card-text">All you need to know to get started investing in crypto. Go from beginner
+              to advanced with this 54 hour course.</p>
+            <a href="#">Get Started</a>
+          </div>
+        </div>
+        <div class="courses__card">
+          <img class="courses__card-img"
+            src="./assets/icon-business.svg"
+            alt="">
+          <div class="courses__card-content">
+            <h3 class="courses__card-title">Business
+            </h3>
+            <p class="courses__card-text">A step-by-step playbook to help you start, scale, and sustain your business
+              without outside investment.</p>
+            <a href="#">Get Started</a>
+          </div>
+        </div>
 
+      </div>
     </section>
   </main>
 
-  <!-- 
-  Check out our most popular courses!
 
-  Animation
-  Learn the latest animation techniques to create stunning motion
-  design and captivate your audience.
-  Get Started
-
-  Design
-  Create beautiful, usable interfaces to help shape the future of
-  how the web looks.
-  Get Started
-
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus
-  to capture exceptional photos.
-  Get Started
-
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner
-  to advanced with this 54 hour course.
-  Get Started
-
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business
-  without outside investment.
-  Get Started
-
-  Get Started -->
+  <footer class="footer">
+    <img class="footer__logo"
+      src="./assets/logo-light.svg"
+      alt="Skilled logo">
+    <a footer__btn
+      href="#">
+      Get Started
+    </a>
+  </footer>
 
 </body>
 
