updated index.html and style.scss

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,8 @@
             </h3>
             <p class="courses__card-text">Learn the latest animation techniques to create stunning motion
               design and captivate your audience.</p>
-            <a href="#">Get Started</a>
+            <a class="courses__link"
+              href="#">Get Started</a>
           </div>
         </div>
         <div class="courses__card">
@@ -81,7 +82,8 @@
             </h3>
             <p class="courses__card-text">Create beautiful, usable interfaces to help shape the future of
               how the web looks.</p>
-            <a href="#">Get Started</a>
+            <a class="courses__link"
+              href="#">Get Started</a>
           </div>
         </div>
         <div class="courses__card">
@@ -93,7 +95,8 @@
             </h3>
             <p class="courses__card-text">Explore critical fundamentals like lighting, composition, and focus
               to capture exceptional photos.</p>
-            <a href="#">Get Started</a>
+            <a class="courses__link"
+              href="#">Get Started</a>
           </div>
         </div>
         <div class="courses__card">
@@ -105,7 +108,8 @@
             </h3>
             <p class="courses__card-text">All you need to know to get started investing in crypto. Go from beginner
               to advanced with this 54 hour course.</p>
-            <a href="#">Get Started</a>
+            <a class="courses__link"
+              href="#">Get Started</a>
           </div>
         </div>
         <div class="courses__card">
@@ -117,10 +121,10 @@
             </h3>
             <p class="courses__card-text">A step-by-step playbook to help you start, scale, and sustain your business
               without outside investment.</p>
-            <a href="#">Get Started</a>
+            <a class="courses__link"
+              href="#">Get Started</a>
           </div>
         </div>
-
       </div>
     </section>
   </main>
@@ -130,7 +134,7 @@
     <img class="footer__logo"
       src="./assets/logo-light.svg"
       alt="Skilled logo">
-    <a footer__btn
+    <a class="footer__btn"
       href="#">
       Get Started
     </a>
