--- a/src/index.html
+++ b/src/index.html
@@ -32,28 +32,36 @@
   <header class="header">
     <img class="header__logo"
       src="./assets/logo-dark.svg"
-      alt="Skilled logo">
+      alt="Skilled logo"
+      width="112"
+      height="29">
     <a class="header__btn"
       href="#">Get Started</a>
   </header>
   <main>
     <section class="intro">
 
-      <h1 class="intro__title">Maximize skill, minimize budget</h1>
-      <p class="intro__text">Our modern courses across a range of in-demand skills will give you the
-        knowledge you need to live the life you want.</p>
+      <div class="intro__container">
 
-      <a class="intro__btn"
-        href="#">Get Started</a>
+        <h1 class="intro__title">Maximize skill, minimize budget</h1>
+        <p class="intro__text">Our modern courses across a range of in-demand skills will give you the
+          knowledge you need to live the life you want.</p>
 
-      <picture>
+        <a class="intro__btn"
+          href="#">Get Started</a>
+      </div>
+
+      <picture class="intro__picture">
         <source media="(min-width: 1440px)"
           srcset="./assets/image-hero-desktop.webp">
-        <source media="(min-width: 900px)"
+        <source media="(min-width: 768px)"
           srcset="./assets/image-hero-tablet.webp">
-        <source srcset="./assets/image-hero-mobile@2x.webp">
-        <img src="./assets/image-hero-mobile.png"
-          alt="Woman drinking coffee">
+        <source srcset="./assets/image-hero-mobile.webp">
+        <img class="intro__img"
+          src="./assets/image-hero-mobile.png"
+          alt="Woman drinking coffee"
+          width="435"
+          height="409">
       </picture>
     </section>
 
@@ -63,7 +71,9 @@
         <div class="courses__card">
           <img class="courses__card-img"
             src="./assets/icon-animation.svg"
-            alt="">
+            alt=""
+            width="56"
+            height="56">
           <div class="courses__card-content">
             <h3 class="courses__card-title">Animation
             </h3>
@@ -76,7 +86,9 @@
         <div class="courses__card">
           <img class="courses__card-img"
             src="./assets/icon-design.svg"
-            alt="">
+            alt=""
+            width="56"
+            height="56">
           <div class="courses__card-content">
             <h3 class="courses__card-title">Design
             </h3>
@@ -89,7 +101,9 @@
         <div class="courses__card">
           <img class="courses__card-img"
             src="./assets/icon-photography.svg"
-            alt="">
+            alt=""
+            width="56"
+            height="56">
           <div class="courses__card-content">
             <h3 class="courses__card-title">Photography
             </h3>
@@ -102,7 +116,9 @@
         <div class="courses__card">
           <img class="courses__card-img"
             src="./assets/icon-crypto.svg"
-            alt="">
+            alt=""
+            width="56"
+            height="56">
           <div class="courses__card-content">
             <h3 class="courses__card-title">Crypto
             </h3>
@@ -115,7 +131,9 @@
         <div class="courses__card">
           <img class="courses__card-img"
             src="./assets/icon-business.svg"
-            alt="">
+            alt=""
+            width="56"
+            height="56">
           <div class="courses__card-content">
             <h3 class="courses__card-title">Business
             </h3>
@@ -133,7 +151,9 @@
   <footer class="footer">
     <img class="footer__logo"
       src="./assets/logo-light.svg"
-      alt="Skilled logo">
+      alt="Skilled logo"
+      width="112"
+      height="29">
     <a class="footer__btn"
       href="#">
       Get Started
