updated styles and removed header element

--- a/src/index.html
+++ b/src/index.html
@@ -29,16 +29,17 @@
 </head>
 
 <body>
-  <header class="header">
-    <img class="header__logo"
-      src="./assets/logo-dark.svg"
-      alt="Skilled logo"
-      width="112"
-      height="29">
-    <a class="header__btn"
-      href="#">Get Started</a>
-  </header>
+
   <main>
+    <section class="header">
+      <img class="header__logo"
+        src="./assets/logo-dark.svg"
+        alt="Skilled logo"
+        width="112"
+        height="29">
+      <a class="header__btn"
+        href="#">Get Started</a>
+    </section>
     <section class="intro">
 
       <div class="intro__container">
