Updated index.html and _colors.scss
changed courses cards links class name, added darker color  for courses__card-link elements for contrast

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
           </h3>
           <p class="courses__card-text">Learn the latest animation techniques to create stunning motion
             design and captivate your audience.</p>
-          <a class="courses__link"
+          <a class="courses__card-link"
             href="#">Get Started</a>
         </div>
       </div>
@@ -94,7 +94,7 @@
           </h3>
           <p class="courses__card-text">Create beautiful, usable interfaces to help shape the future of
             how the web looks.</p>
-          <a class="courses__link"
+          <a class="courses__card-link"
             href="#">Get Started</a>
         </div>
       </div>
@@ -109,7 +109,7 @@
           </h3>
           <p class="courses__card-text">Explore critical fundamentals like lighting, composition, and focus
             to capture exceptional photos.</p>
-          <a class="courses__link"
+          <a class="courses__card-link"
             href="#">Get Started</a>
         </div>
       </div>
@@ -124,7 +124,7 @@
           </h3>
           <p class="courses__card-text">All you need to know to get started investing in crypto. Go from beginner
             to advanced with this 54 hour course.</p>
-          <a class="courses__link"
+          <a class="courses__card-link"
             href="#">Get Started</a>
         </div>
       </div>
@@ -139,7 +139,7 @@
           </h3>
           <p class="courses__card-text">A step-by-step playbook to help you start, scale, and sustain your business
             without outside investment.</p>
-          <a class="courses__link"
+          <a class="courses__card-link"
             href="#">Get Started</a>
         </div>
       </div>
