--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 
-  <link rel="preconnect"
+  <!-- <link rel="preconnect"
     href="https://fonts.googleapis.com">
   <link rel="preconnect"
     href="https://fonts.gstatic.com"
     crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap"
-    rel="stylesheet">
+    rel="stylesheet"> -->
 
   <link rel="stylesheet"
     href="./css/style.css">
