--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
 
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 
-  <link rel="preconnect"
+  <!-- <link rel="preconnect"
     href="https://fonts.googleapis.com">
   <link rel="preconnect"
     href="https://fonts.gstatic.com"
     crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap"
-    rel="stylesheet">
+    rel="stylesheet"> -->
 
   <link rel="stylesheet"
     href="./css/style.css">
@@ -33,7 +33,7 @@
   <main>
     <section class="header">
       <img class="header__logo"
-        src="./assets/logo-dark.svg"
+        src="./assets/images/logo-dark.svg"
         alt="Skilled logo"
         width="112"
         height="29">
@@ -54,12 +54,12 @@
 
       <picture class="intro__picture">
         <source media="(min-width: 1440px)"
-          srcset="./assets/image-hero-desktop.webp">
+          srcset="./assets/images/image-hero-desktop.webp">
         <source media="(min-width: 768px)"
-          srcset="./assets/image-hero-tablet.webp">
-        <source srcset="./assets/image-hero-mobile.webp">
+          srcset="./assets/images/image-hero-tablet.webp">
+        <source srcset="./assets/images/image-hero-mobile.webp">
         <img class="intro__img"
-          src="./assets/image-hero-mobile.png"
+          src="./assets/images/image-hero-mobile.png"
           alt="Woman drinking coffee"
           width="435"
           height="409">
@@ -70,7 +70,7 @@
       <h2 class="courses__title">Check out our most popular courses!</h2>
       <div class="courses__card">
         <img class="courses__card-img"
-          src="./assets/icon-animation.svg"
+          src="./assets/images/icon-animation.svg"
           alt=""
           width="56"
           height="56">
@@ -85,7 +85,7 @@
       </div>
       <div class="courses__card">
         <img class="courses__card-img"
-          src="./assets/icon-design.svg"
+          src="./assets/images/icon-design.svg"
           alt=""
           width="56"
           height="56">
@@ -100,7 +100,7 @@
       </div>
       <div class="courses__card">
         <img class="courses__card-img"
-          src="./assets/icon-photography.svg"
+          src="./assets/images/icon-photography.svg"
           alt=""
           width="56"
           height="56">
@@ -115,7 +115,7 @@
       </div>
       <div class="courses__card">
         <img class="courses__card-img"
-          src="./assets/icon-crypto.svg"
+          src="./assets/images/icon-crypto.svg"
           alt=""
           width="56"
           height="56">
@@ -130,7 +130,7 @@
       </div>
       <div class="courses__card">
         <img class="courses__card-img"
-          src="./assets/icon-business.svg"
+          src="./assets/images/icon-business.svg"
           alt=""
           width="56"
           height="56">
@@ -148,7 +148,7 @@
 
   <footer class="footer">
     <img class="footer__logo"
-      src="./assets/logo-light.svg"
+      src="./assets/images/logo-light.svg"
       alt="Skilled logo"
       width="112"
       height="29">
