--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <main>
     <section class="header">
+      <h1 class="header__title">Skilled e-learning landing page header</h1>
       <img class="header__logo"
         src="./assets/images/logo-dark.svg"
         alt="Skilled logo"
